# navokoj

./: CITATION.cff  LICENSE  MANIFEST.in  MANIFOLD_IMPLEMENTATION.md  NAVOKOJ_FRAMEWORK.md  README.md  TUTORIAL_GRAPH_COLORING.md  demo.py  local_stress_test.py  manifold.md  pyproject.toml  shunya_bar_api_demo.py  wedding.py
blog/: wedding-seating-max-sat.md
navokoj/: __init__.py  benchmark.py  qstate_solver.py  sat_solver.py  scheduler.py
tutorials/: graph_coloring.md
