[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navokoj"
version = "0.1.0"
description = "The Arithmetic Manifold Framework for Constraint Satisfaction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sethu Iyer", email = "sethuiyer95@gmail.com"}
]
keywords = [
    "constraint-satisfaction",
    "sat-solving", 
    "geometric-deep-learning",
    "optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "mypy>=0.950",
]
benchmark = [
    "matplotlib>=3.5",
    "pandas>=1.4",
]

[project.urls]
Homepage = "https://github.com/sethuiyer/navokoj"
Repository = "https://github.com/sethuiyer/navokoj"
Documentation = "https://github.com/sethuiyer/navokoj"
"Bug Tracker" = "https://github.com/sethuiyer/navokoj/issues"
"Arithmetic Manifold Theory" = "https://medium.com/@sethuiyer"

[tool.setuptools.packages.find]
where = ["."]
include = ["navokoj*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true